--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Javascript Tester</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <main>
@@ -71,6 +71,6 @@
         </form>
       </div>
     </main>
-    <script type="module" src="app.js"></script>
+    <script type="module" src="./dist/app.js"></script>
   </body>
 </html>
